[package]
name = "slcanx"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3.10", optional = true }
embedded-can = "0.4.1"
heapless = "0.8.0"
num_enum = { version = "0.7.3", default-features = false }
thiserror = { version = "2.0.3", default-features = false }

[features]
defmt = ["dep:defmt"]
